# desmistificando_webassembly

./: .gitignore
cap2/: readme.md
cap2/modulo/: index.html
cap2/modulo/src/: lib.rs
cap3/: array_buffer.js  data_view.js  index.html  memory.js  readme.md
cap3/modulo_soma/: Cargo.toml
cap3/modulo_soma/src/: lib.rs
cap4/editor/: Cargo.toml
cap4/editor/src/: lib.rs
cap4/site/: editor.css  editor.js  editor.wasm
cap5/: compila_numeros.sh  compila_vinculacao.sh  compila_vinculacao_com_numeros.sh  index.html  lista_simbolos.sh  numeros.rs  vinculacao.js  vinculacao.rs  vinculacao.wasm
cap6/: Makefile  index.html  livro.js  livro.rs  livro.wasm
cap7/ex_atomico/: Makefile  atomico  atomico.rs
cap7/wasm-thread/: Makefile  index.html  worker.js
cap7/wasm-thread/.cargo/: config.toml
cap7/wasm-thread/src/: lib.rs
cap7/wasm_thread/: Cargo.toml  app.js
cap8/err_comp/: app.js  arquivo_invalido.wasm  index.html
cap8/err_instancia/: Makefile  app.js  index.html  soma_ate_n.rs  soma_ate_n.wasm
cap8/err_runtime/: Makefile  app.js  index.html  runtime.rs  runtime.wasm
cap8/excecao/: Makefile  app.js  excecao.rs  excecao.wasm  index.html
extra/crypto/: Cargo.toml  Makefile  README.md  wasm_crypto.instructions.md
extra/crypto/crypto_web/: app.js  index.html  rust_encryption_lib.wasm  worker.js
extra/crypto/exemplo/: app.js  worker.js
extra/crypto/src/: lib.rs
