[package]
name = "rust-encryption-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
hmac = "0.12.1"
sha2 = "0.10.8"
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]